--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -132,6 +132,10 @@ body.cms {
 	}
 }
 
+#Form_EditForm.CMSMain {
+	padding: 0;
+}
+
 /** --------------------------------------------
  * Tabs
  * -------------------------------------------- */
